@@ -2,6 +2,7 @@ package com.patentsight.review.service;
 
 import com.patentsight.patent.domain.Patent;
 import com.patentsight.patent.domain.PatentStatus;
+import com.patentsight.patent.domain.PatentType;
 import com.patentsight.patent.repository.PatentRepository;
 import com.patentsight.review.domain.Review;
 import com.patentsight.review.dto.*;
@@ -42,29 +43,35 @@ public class ReviewServiceImpl implements ReviewService {
     // 1️⃣ 심사관 수동 배정
     @Override
     public Review assignReviewer(AssignRequest request) {
+        // 1. 출원번호로 특허 조회
         Patent patent = patentRepository.findByApplicationNumber(request.getApplicationNumber())
                 .orElseThrow(() -> new IllegalArgumentException(
                         "Patent not found with application number: " + request.getApplicationNumber()));
 
+        // 2. 심사관 조회
         User examiner = userRepository.findById(request.getExaminerId())
                 .orElseThrow(() -> new IllegalArgumentException(
                         "Examiner not found with ID: " + request.getExaminerId()));
 
+        // 3. Review 생성
         Review review = new Review();
         review.setPatent(patent);
         review.setExaminer(examiner);
-        review.setDecision(Review.Decision.PENDING);
+        // 초기 상태는 SUBMITTED로 설정
+        review.setDecision(Review.Decision.SUBMITTED);
         review.setReviewedAt(null);
         review.setAutoAssigned(false);
 
+        // ✅ 4. 저장
         Review savedReview = reviewRepository.save(review);
 
+        // ✅ 5. OpinionNotice 자동 생성 (NOT_STARTED 상태)
         OpinionNotice notice = OpinionNotice.builder()
                 .review(savedReview)
-                .type(null)
-                .status(OpinionStatus.NOT_STARTED)
-                .content(null)
-                .structuredContent(null)
+                .type(null)                     // 아직 유형 없음
+                .status(OpinionStatus.NOT_STARTED) // ✅ 핵심!
+                .content(null)                 // 내용 없음
+                .structuredContent(null)       // 구조화 없음
                 .isAiDrafted(false)
                 .createdAt(LocalDateTime.now())
                 .build();
@@ -85,9 +92,25 @@ public class ReviewServiceImpl implements ReviewService {
     // 2️⃣ 자동 배정 (전문분야 + 최소 업무량 기준, 없으면 대기 상태)
     @Override
     public void autoAssignWithSpecialty(Patent patent) {
-        Optional<User> examinerOpt = userRepository.findTopByDepartmentOrderByCurrentLoadAsc(
-                DepartmentType.valueOf(patent.getType().name())
-        ); // ✅ 세미콜론 누락 주의
+        // 기존에 미완료 Review가 있으면 새로 생성하지 않고 재사용
+        Optional<Review> existingOpt = reviewRepository.findTopByPatent_PatentIdOrderByReviewedAtDesc(patent.getPatentId());
+        if (existingOpt.isPresent()) {
+            Review existing = existingOpt.get();
+            if (existing.getDecision() == Review.Decision.SUBMITTED || existing.getDecision() == Review.Decision.REVIEWING) {
+                existing.setDecision(Review.Decision.SUBMITTED);
+                existing.setReviewedAt(null);
+                reviewRepository.save(existing);
+                return;
+            }
+        }
+
+        DepartmentType dept = switch (patent.getType()) {
+            case PATENT, UTILITY_MODEL -> DepartmentType.PATENT;
+            case DESIGN -> DepartmentType.DESIGN;
+            case TRADEMARK -> DepartmentType.TRADEMARK;
+        };
+
+        Optional<User> examinerOpt = userRepository.findTopByDepartmentOrderByCurrentLoadAsc(dept);
 
         if (examinerOpt.isEmpty()) {
             patent.setStatus(PatentStatus.WAITING_ASSIGNMENT);
@@ -100,7 +123,8 @@ public class ReviewServiceImpl implements ReviewService {
         Review review = new Review();
         review.setPatent(patent);
         review.setExaminer(examiner);
-        review.setDecision(Review.Decision.PENDING);
+        // 자동 배정된 리뷰도 초기 상태는 SUBMITTED
+        review.setDecision(Review.Decision.SUBMITTED);
         review.setAutoAssigned(true);
 
         reviewRepository.save(review);
@@ -130,12 +154,14 @@ public class ReviewServiceImpl implements ReviewService {
     // 3️⃣ 심사 목록 조회
     @Override
     public List<ReviewListResponse> getReviewList(Long userId, String status) {
+        // status → Review.Decision 매핑
         Review.Decision decisionFilter = null;
         if (status != null && !status.isBlank()) {
             switch (status.toUpperCase()) {
-                case "REVIEWING" -> decisionFilter = Review.Decision.PENDING;
-                case "APPROVED" -> decisionFilter = Review.Decision.APPROVE;
-                case "REJECTED" -> decisionFilter = Review.Decision.REJECT;
+                case "REVIEWING" -> decisionFilter = Review.Decision.REVIEWING;
+                case "APPROVED"  -> decisionFilter = Review.Decision.APPROVE;
+                case "REJECTED"  -> decisionFilter = Review.Decision.REJECT;
+                case "SUBMITTED" -> decisionFilter = Review.Decision.SUBMITTED;
             }
         }
 
@@ -143,25 +169,21 @@ public class ReviewServiceImpl implements ReviewService {
                 ? reviewRepository.findByExaminer_UserId(userId)
                 : reviewRepository.findByExaminer_UserIdAndDecision(userId, decisionFilter);
 
-        return reviews.stream()
-                .map(r -> ReviewListResponse.builder()
-                        .reviewId(r.getReviewId())
-                        .patentTitle(r.getPatent().getTitle())
-                        .applicantName(getApplicantName(r.getPatent().getApplicantId()))
-                        .examinerName(r.getExaminer().getName())
-                        .status(convertToPatentStatus(r.getDecision()).name())
-                        .build())
-                .collect(Collectors.toList());
+            return reviews.stream().map(r -> {
+                var p = r.getPatent();
+                return ReviewListResponse.builder()
+                    .reviewId(r.getReviewId())
+                    .patentTitle(p.getTitle())
+                    .applicantName(getApplicantName(p.getApplicantId()))
+                    .examinerName(r.getExaminer().getName())
+                    .status(r.getDecision().name())
+                    .submittedAt(p.getSubmittedAt() != null ? p.getSubmittedAt().toLocalDate() : null) // 리스트 카드에 바로 씀
+                    .build();
+            }).toList();
+
     }
 
-    private PatentStatus convertToPatentStatus(Review.Decision decision) {
-        return switch (decision) {
-            case PENDING -> PatentStatus.REVIEWING;
-            case APPROVE -> PatentStatus.APPROVED;
-            case REJECT -> PatentStatus.REJECTED;
-        };
-    }
-
+    // 🔹 출원인 이름 조회
     private String getApplicantName(Long applicantId) {
         return userRepository.findById(applicantId)
                 .map(User::getName)
@@ -173,18 +195,18 @@ public class ReviewServiceImpl implements ReviewService {
     public ReviewDetailResponse getReviewDetail(Long reviewId) {
         Review review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "리뷰를 찾을 수 없습니다."));
-        Patent patent = review.getPatent();
-        User examiner = review.getExaminer();
-        String applicantName = getApplicantName(patent.getApplicantId());
+        Patent patent = review.getPatent(); // 특허 정보
+        User examiner = review.getExaminer(); // 심사관 정보
+        String applicantName = getApplicantName(patent.getApplicantId()); // 출원인 이름 조회
 
         return ReviewDetailResponse.builder()
-                .reviewId(review.getReviewId())
+                .reviewId(review.getReviewId()) // ✅ Review 객체 기준으로 변경
                 .patentId(patent.getPatentId())
                 .title(patent.getTitle())
                 .applicantName(applicantName)
                 .inventor(patent.getInventor())
                 .applicationNumber(patent.getApplicationNumber())
-                .applicationDate(patent.getSubmittedAt().toLocalDate())
+                .applicationDate(patent.getSubmittedAt().toLocalDate()) // LocalDateTime → LocalDate 변환
                 .technicalField(patent.getTechnicalField())
                 .backgroundTechnology(patent.getBackgroundTechnology())
                 .problemToSolve(patent.getProblemToSolve())
@@ -193,12 +215,33 @@ public class ReviewServiceImpl implements ReviewService {
                 .summary(patent.getSummary())
                 .drawingDescription(patent.getDrawingDescription())
                 .claims(patent.getClaims())
-                .applicationContent(generateApplicationContent(patent))
+                .applicationContent(generateApplicationContent(patent)) // ✅ 명세서 요약 조합
                 .cpc(patent.getCpc())
-                .reviewStatus(patent.getStatus().name())
+                .reviewStatus(patent.getStatus().name()) // PatentStatus 사용
                 .examinerName(examiner.getName())
                 .decision(review.getDecision())
                 .comment(review.getComment())
+                .reviewedAt(review.getReviewedAt())
+                .aiChecks(List.of()) // 현재 Review에 AI 점검 결과 필드 없음 → 빈 리스트로 처리
+                .build();
+    }
+
+    // 4-1️⃣ 특정 특허의 최신 심사 결과 조회
+    @Override
+    public ReviewDetailResponse getLatestReviewByPatent(Long patentId) {
+        Review review = reviewRepository.findTopByPatent_PatentIdOrderByReviewedAtDesc(patentId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "리뷰를 찾을 수 없습니다."));
+
+        String comment = review.getComment();
+        if (review.getDecision() == Review.Decision.SUBMITTED) {
+            comment = "심사전입니다";
+        }
+
+        return ReviewDetailResponse.builder()
+                .reviewId(review.getReviewId())
+                .patentId(review.getPatent().getPatentId())
+                .decision(review.getDecision())
+                .comment(comment)
                 .reviewedAt(review.getReviewedAt())
                 .aiChecks(List.of())
                 .build();
@@ -218,27 +261,48 @@ public class ReviewServiceImpl implements ReviewService {
     // 5️⃣ 심사 결과 제출
     @Override
     public Review submitReview(SubmitReviewRequest request) {
-        Review review = reviewRepository.findByPatent_PatentId(request.getPatentId())
-                .orElseThrow(() -> new IllegalArgumentException("Review not found"));
-
-        review.setDecision(Review.Decision.valueOf(request.getDecision().toUpperCase()));
+        Review review;
+    
+        // 🔸 1. reviewId가 전달되면 그 ID로 Review 조회
+        if (request.getReviewId() != null) {
+            review = reviewRepository.findById(request.getReviewId())
+                    .orElseThrow(() -> new IllegalArgumentException("Review not found"));
+        } else {
+            // 🔸 2. patentId로 조회했을 때 여러 개면 → 가장 최근 것 선택
+            List<Review> reviews = reviewRepository.findByPatent_PatentId(request.getPatentId());
+            if (reviews.isEmpty()) {
+                throw new IllegalArgumentException("Review not found");
+            }
+    
+            // reviewedAt 기준으로 가장 최근 것 선택
+            reviews.sort((a, b) -> {
+                LocalDateTime t1 = a.getReviewedAt() != null ? a.getReviewedAt() : LocalDateTime.MIN;
+                LocalDateTime t2 = b.getReviewedAt() != null ? b.getReviewedAt() : LocalDateTime.MIN;
+                return t1.compareTo(t2);
+            });
+            review = reviews.get(reviews.size() - 1);
+        }
+    
+        // 🔸 3. Review 상태/코멘트 갱신
+        Review.Decision decision = Review.Decision.valueOf(request.getDecision().toUpperCase());
+        review.setDecision(decision);
         review.setComment(request.getComment());
         review.setReviewedAt(LocalDateTime.now());
-
+        // 🔸 4. Review 저장 (Patent 상태는 Review.setDecision에서 동기화)
         Review updatedReview = reviewRepository.save(review);
-
-        // 🔔 알림 생성 - 출원인
-        if (review.getPatent().getApplicantId() != null) {
+        // 🔔 알림 로직 유지
+        Patent patent = review.getPatent();
+        if (patent.getApplicantId() != null) {
             notificationService.createNotification(NotificationRequest.builder()
-                    .userId(review.getPatent().getApplicantId())
+                    .userId(patent.getApplicantId())
                     .notificationType("REVIEW_RESULT")
-                    .message("심사 결과가 등록되었습니다: " + review.getDecision().name())
+                    .message("심사 결과가 등록되었습니다: " + updatedReview.getDecision().name())
                     .targetType("REVIEW")
                     .targetId(updatedReview.getReviewId())
                     .build()
             );
         }
-
+    
         return updatedReview;
     }
 
@@ -246,24 +310,40 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     public DashboardResponse getDashboard(Long userId) {
         List<Review> reviews = reviewRepository.findByExaminer_UserId(userId);
-
-        long total = reviews.size();
-        long reviewing = reviews.stream().filter(r -> r.getDecision() == Review.Decision.PENDING).count();
-        long completed = reviews.stream().filter(r -> r.getDecision() != Review.Decision.PENDING).count();
-        long pending = 0;
-
+    
+        // 🔹 특허별로 리뷰를 최신 것만 남기기
+        var latestReviews = reviews.stream()
+                .collect(Collectors.groupingBy(
+                        r -> r.getPatent().getPatentId(), // patentId 별로 그룹핑
+                        Collectors.collectingAndThen(
+                                Collectors.maxBy((a, b) -> {
+                                    LocalDateTime t1 = a.getReviewedAt() != null ? a.getReviewedAt() : LocalDateTime.MIN;
+                                    LocalDateTime t2 = b.getReviewedAt() != null ? b.getReviewedAt() : LocalDateTime.MIN;
+                                    return t1.compareTo(t2);
+                                }),
+                                Optional::get
+                        )
+                ))
+                .values();
+    
+        long total = latestReviews.size();
+        long inReview = latestReviews.stream().filter(r -> r.getDecision() == Review.Decision.REVIEWING).count();
+        long submitted = latestReviews.stream().filter(r -> r.getDecision() == Review.Decision.SUBMITTED).count();
+        long completed = latestReviews.stream().filter(r -> r.getDecision() == Review.Decision.APPROVE || r.getDecision() == Review.Decision.REJECT).count();
+    
         return DashboardResponse.builder()
                 .total(total)
-                .inReview(reviewing)
-                .pending(pending)
+                .inReview(inReview)
+                .pending(submitted)
                 .completed(completed)
                 .build();
     }
 
-    // 7️⃣ 최근 활동
+
+    // 7️⃣ 최근 활동 (임시)
     @Override
     public List<RecentActivityResponse> getRecentActivities() {
-        return List.of();
+        return List.of(); // TODO: Activity 테이블 구현 후 조회
     }
 
     // 8️⃣ 심사 목록 검색
